# find-from-files

./: .pre-commit-config.yaml  README.md  THIRD_PARTY_LICENSES  pylintrc  pyproject.toml
find_from_files/: find_from_files.py
find_it/: find_it.py
tests/: constants.py  functions.py  mock_walk.py  test_regex_search.py  test_simple_search.py
