[project]
name = "find-it"
version = "0.1.0"
description = "Simple CLI application for searching keywords/phrases or regular expression patterns from text files."
authors = [
    {name = "Jari Ikonen",email = "87890204+jariikonen@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "chardet (>=5.2.0,<6.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyink]
line-length = 80

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"
pytest = "^8.3.4"
pre-commit = "^4.1.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
]
